# Chess

./: .gitmodules  CMakeLists.txt
Chess/: CMakeLists.txt
Chess/assets/shaders/: Simple.wgsl
Chess/src/Core/: Base.h  ChessApp.cpp  ChessApp.h  Playground.cpp  UUID.h
Chess/src/Game/: ChessState.h  ChessboardState.cpp  ChessboardState.h  Move.cpp  Move.h
Chess/src/Renderer/: ColorTarget.h  DataBuffer.cpp  DataBuffer.h  Material.h  MaterialSystem.cpp  MaterialSystem.h  Mesh.h  RenderData.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipelineBuilder.cpp  RenderPipelineBuilder.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferView.h
Chess/src/Scene/: Camera.cpp  Camera.h  Components.h  Entity.h  Node.h  ObjLoader.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h
WebgpuLib/src/Base/: Application.cpp  Application.h  Assert.h  Filesystem.h  GraphicsContext.cpp  Log.h
WebgpuLib/src/Platform/Native/: NativeGraphicsContext.cpp
